fix paths for gh-pages

--- a/projects/mirrors.html
+++ b/projects/mirrors.html
@@ -50,12 +50,20 @@
           Scale model of the installation.
         </p>        
 
-        <div class="project-image image-2x1 is-photo gap-md">
+        <div class="project-image image-2x1 is-photo gap-none">
           <img src = "/images/mirrors/mirrors-img-2.jpg" alt="Mirrors image 2">
         </div>
-        <p class="caption">
+        <p class="caption gap-xl">
           Site plan of the full proposal seen along the Thames's South Bank.
         </p>
+
+        <div class="project-image image-2x6 is-photo gap-xl">
+          <img src = "/images/mirrors/mirrors-img-2a.jpg" alt="Mirrors image 2a">
+        </div>
+        <p class="caption gap-md">
+          Enlarged site plan.
+        </p>
+
 
         <div class="project-image image-2x3 is-photo gap-md">
           <img src = "/images/mirrors/mirrors-img-3.jpg" alt="Mirrors image 3">
